2003-01-07  Andras Varga

	* cenvir.h: added ev.flush()

	* cmodule.h: deprecated phase() (nobody really used it)

2003-01-05  Andras Varga

	* macros.h: added macro Define_Function2

2002-12-19  Andras Varga

	* always use <iostream> instead of <iostream.h>

2002-12-17  Andras Varga

	* cobject.h: check_and_cast<T>(cObject *p) template function added --
	it does safe (dynamic) typecast and throws exception if the pointer
	types are incompatible. Useful with message subclassing.

2002-12-02  Andras Varga

	* cmessage.h: added convenience methods: addObject(), getObject(), 
	hasObject(), removeObject(). Refined related documentation and 
	added hint to message subclassing to class description.

2002-11-03  Andras Varga

	* namespace cleanup: several iterator and other small classes
	made inner classes (cKSplitIterator changed to cKSplit::Iterator,
        cQueueIterator to cQueue::Iterator, cLinkedListIterator to
        cLinkedList::Iterator, cMessageHeapIterator to cMessageHeap::Iterator,
        sXElem to cPar::ExprElem, sGrid to cKSplit::Grid, sTopoLink to
        cTopology::Link, sTopoLinkIn to cTopology::LinkIn, sTopoLinkOut to
        cTopology::LinkOut, sTopoNode to cTopology::Node). #defines for
        backwards compatibility were added to defs.h.

2002-10-27  Andras Varga

	* Started to use C++ RTTI. It is no longer necessary to redefine
	className() in every cObject subclass. The class name string is now
	produced in the base class (cObject::className()) using the typeid
	operator.

	Tested with MSVC 6.0 and Cygwin/gcc-2.95.3-5. With MSVC, one needs
	to compile every source using /GR, otherwise Tkenv crashes (RTTI
	exception)!

	* cobject.h: removed inspector() and inspectorFactoryName() methods
	from cObject

        * ctypes.h, macros.h: removed TInspector and the inspectorfactory
        stuff altogether (they didn't really belong here). The whole stuff
        was moved to Tkenv.

2002-10-20  Andras Varga
