@@ -1,3 +1,9 @@
+2003-01-14  Andras Varga
+
+	* cwatch.h: added support for 'bool'
+
+	* index.h: cOutVector doc moved from group 'SimSupport' to 'Statistics'
+
 2003-01-07  Andras Varga
 
 	* cenvir.h: added ev.flush()
@@ -15,8 +21,9 @@
 2002-12-17  Andras Varga
 
 	* cobject.h: check_and_cast<T>(cObject *p) template function added --
-	it does safe (dynamic) typecast and throws exception if the pointer
-	types are incompatible. Useful with message subclassing.
+	it can be used to assert that a pointer is of the given T type.
+	It does dynamic_cast<T> and throws exception if the result is NULL
+	(ie. pointer types are incompatible). Useful with message subclassing.
 
 2002-12-02  Andras Varga
 
